llvm/dev/methodcall1.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: llvm/dev/methodcall1.llvm:1:1: error: expected top-level entity
LogError: Unknown function referenced
^
